# openclaw-managed-agents

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.orchestrator  Dockerfile.runtime  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish-images.yaml  publish-sdks.yaml  release.yaml  test.yaml
docker/: apply-provider-config.mjs  apply-zenmux-provider-config.mjs  confirm-tools-hook.mjs  entrypoint.sh  provider-prices.json
docker/confirm-tools-plugin/: index.js  package.json
docker/egress-proxy/: README.md  proxy.mjs  proxy.test.mjs
docker/telegram-adapter/: Dockerfile  README.md  package.json  tsconfig.json
docs/: architecture-review-2026-04.md  architecture.md  cloud-backends.md  deploying-on-aws-lightsail.md  deploying-on-gcp-compute.md  deploying-on-hetzner.md
docs/audit/: 02-router-brain.md  03-runtime-pool.md  09-restart-safety.md
docs/designs/: networking-limited.md  (+1 more)
openapi/: openapi.yaml
scripts/: deploy-aws-lightsail.sh  deploy-gcp-compute.sh  deploy-hetzner.sh  rotate-api-token.sh  seed-demo.mjs
sdk/python/: README.md  pyproject.toml
sdk/python/openclaw_managed_agents/: __init__.py  types.py
sdk/python/openclaw_managed_agents/resources/: agents.py  environments.py  sessions.py  vaults.py
sdk/python/tests/: test_sdk.py
src/: auth.test.ts  auth.ts  index.ts  metrics.ts  model-aliases.json  rate-limit.test.ts  rate-limit.ts
test/: e2e-features.sh  e2e.sh
(+67 files in other folders)
