[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-managed-agents"
version = "0.1.0"
description = "Python SDK for OpenClaw Managed Agents — the open alternative to Claude Managed Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["openclaw", "managed-agents", "agents", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
    "httpx-sse>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/stainlu/openclaw-managed-agents"
Documentation = "https://github.com/stainlu/openclaw-managed-agents#python-sdk"
Repository = "https://github.com/stainlu/openclaw-managed-agents"

[tool.hatch.build.targets.wheel]
packages = ["openclaw_managed_agents"]
exclude = ["**/__pycache__", "**/*.pyc"]

[tool.hatch.build.targets.sdist]
exclude = ["**/__pycache__", "**/*.pyc"]
